# supermarket-service

./: Cargo.toml  Dockerfile  Readme.md  build.rs  deployment.yml  k8s.yml  sonar-project.properties
.github/workflows/: cd.yml  cloud-run.yml  codecov.yml  gke.yml  k8s.yml  sonarcloud.yml
.sqlx/: query-3892bafaec11cee5fe91c0fd88b6c8f21b9ee144e04af2f45372f2d925945b05.json  query-3dcabaa87fb86dbc74beae487b58f3bc74ff373bd2ebeba7c0b91ee68a2b1725.json  query-61ec904295cd91e10bcc5633df508fb7a6adee9a243be566424b1ef1cfc924d9.json  query-62efac50186c8507d14199220d4e8cfb0988494f869aad1ad19b7351268a0acb.json  query-7426ec83777d3d73d87cad34dfbc60f7346d1ef99d4c68781f575bd2d1934235.json  query-8500e1b92a9f2a0a5cc1b3746f60494726b99f5fe83c65461e5edce7943f2fe8.json  query-a69961e846ce79105af63e29920b804060a4e79c528f16b6fc975c8f46ae764d.json  query-a924e6a044730d18036a4acf999a82b6d2f85f40b5cd55294cd7a8025bce2194.json  query-ae40a0cf7df482ecd51f8f356ccbb7c0aa2c75ce9838d3c5253c890f05bdbeab.json  query-d809651089ba386f4f2704a52351662bec7a8ac21e00cb164192c506f0945235.json
k8s/: deployment.yaml  service.yaml
proto/: services.proto
src/: main.rs
src/controller/: mod.rs  product.rs  supermarket.rs  supermarket_test.rs
src/guard/: auth_guard.rs
src/model/: mod.rs  product.rs
src/proto/: services.proto
src/repository/: mod.rs  product.rs  supermarket.rs  supermarket_test.rs
src/service/: product.rs  supermarket.rs  supermarket_test.rs
